--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react-dom": "^18.2.0",
     "react-native": "^0.71.4",
     "react-native-mssql": "^0.1.4",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-tabs": "^6.0.1",
     "sass": "^1.58.3",
     "web-vitals": "^2.1.4"
   },
