--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-modal": "^3.16.1",
     "react-native": "^0.71.4",
     "react-native-mssql": "^0.1.4",
     "react-responsive-carousel": "^3.2.23",
