--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.1",
     "sass": "^1.58.3",
+    "urlencode": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
