--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "link": "^1.5.1",
     "mssql": "^9.1.1",
     "mysql": "^2.18.1",
+    "rc-slider": "^10.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-double-range-slider": "^3.0.1",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.9",
     "react-modal": "^3.16.1",
     "react-native": "^0.71.4",
