--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-tabs": "^6.0.1",
+    "react-yandex-metrika": "^2.6.0",
     "sass": "^1.58.3",
+    "swiper": "^9.3.2",
     "urlencode": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
