--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "urlencode": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "http://localhost:3004",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
